--- a/proyecto.html
+++ b/proyecto.html
@@ -36,9 +36,14 @@
 <div id="izq">
 <div id="parrafo"><p><i>Memoria cartográfica</i> es un modelo de visualización para los límites visuales que se trazan sobre las tierras que habitamos, propone discutir en torno a las diversas representaciones cartográficas que conforman el imaginario de nuestros territorios.<br>
 <br>
+
 Centrando la atención en las evocaciones que las imágenes provocan por sí mismas y en las relaciones cambiantes que establecen entre ellas y con quien las observa, este atlas de imágenes plantea una cartografía abierta que no se lee de manera secuencial, sino está dispuesta de manera anacrónica, adireccional e indeterminada, y su lectura idea un proceso de exploración y presentación de sistemas de relaciones no-evidentes.<br>
 <br>
-A partir de la recopilación documental de representaciones cartográficas de las zonas limítrofes de Chile y Bolivia se problematiza respecto a los límites visuales que dichos documentos instalan entre estos países. Así, las 200 imágenes que conforman la muestra han sido etiquetadas utilizando tags, en búsqueda de generar grupos críticos  que devienen de las relaciones que emergen de su entrecruzamiento, como la geometrización del territorio, los caminos, las alturas, la cordillera como eje estructural, el uso y relación con la tierra, entre otros.<br>
+
+A partir de la recopilación documental de representaciones cartográficas de las zonas limítrofes de Chile y Bolivia se problematiza respecto a los límites visuales que dichos documentos instalan entre estos países. Así, las 200 imágenes que conforman la muestra han sido etiquetadas utilizando <a href="etiquetas/todas.html" style="color:rgb(203,79, 76); text-decoration:none;">tags</a>, en búsqueda de generar grupos críticos que devienen de las relaciones que emergen de su entrecruzamiento, como la <a href="etiquetas/racionalizado.html" style="color:rgb(203,79, 76); text-decoration:none;">#Racionalizacion</a>, <a href="etiquetas/caminos.html" style="color:rgb(203,79, 76); text-decoration:none;">#Caminos</a>, <a href="etiquetas/cordillera.html" style="color:rgb(203,79, 76); text-decoration:none;">#CordilleraComoEjeEstructural</a>, <a href="etiquetas/usoyrelacion.html" style="color:rgb(203,79, 76); text-decoration:none;">#UsoYRelaciónConLaTierra</a>, <a href="etiquetas/t-disputa.html" style="color:rgb(203,79, 76); text-decoration:none;">#TerritorioEnDisputa</a>, entre otros. <br>
+    <br>
+Este es un modelo en desarrollo, cuya primera versión digital nos da insumos para comenzar a discutir. En una segunda etapa, pretendemos evaluar la interacción entre las imágenes y las posibilidades que otorgan las etiquetas en cuanto a los cruces de información, para mejorar tanto la interacción entre los contenidos, como la experiencia del usuario con 
+la plataforma. Si tienes comentarios, no dudes en escribirnos!
 
 
  </p></div>
@@ -52,7 +57,34 @@ A partir de la recopilación documental de representaciones cartográficas de la
 <div id="infoto"><p> Panoramas: Ilustración (Panorama de Rio frio,Viaje al Desierto de Atacama de Rodulfo Amando Philippi, Biblioteca Fundamentos de la Construcción de Chile, 2008); Tejido andino (Cereceda, V., Dávalos, J., & Mejía, I. (1993). Una diferencia, un sentido: Los diseños de los textiles tarabuco y jal’qa. ASUR) </p>
 </div>
 
- <img src="panoramas.jpg">
+<div class="container">
+    <img id="imaguno" src="panoramas-1.jpg">
+    <div id="overlayuno">
+        <div id="textouno">
+
+        <a href="etiquetas/t-racionalizado.html">#TerritorioRacionalizado</a><br>
+        <a href="etiquetas/alturas.html">#Alturas</a>
+        <a href="etiquetas/bancl.html">#BibliotecaYArchivoNacionalDeChile</a>
+
+
+
+        </div>
+    </div>
+</div>
+
+<div class="container" ="containerdos">
+ <img id="imagdos"src="panoramas-2.jpg">
+    <div id="overlaydos">
+        <div id="textodos">
+        <a href="etiquetas/t-racionalizado.html">#TerritorioRacionalizado</a>
+        <a href="etiquetas/alturas.html">#Alturas</a>
+        <a href="etiquetas/asa.html">#AntropologosDelSurAndino</a>
+        </div>
+    </div>
+</div>
+
+ 
+
 
 
  <div id="pie" >
