--- a/proyecto.html
+++ b/proyecto.html
@@ -63,7 +63,7 @@ la plataforma. Si tienes comentarios, no dudes en escribirnos!
         <div id="textouno">
 
         <a href="etiquetas/t-racionalizado.html">#TerritorioRacionalizado</a><br>
-        <a href="etiquetas/alturas.html">#Alturas</a>
+        <a href="etiquetas/alturas.html">#Alturas</a><br>
         <a href="etiquetas/bancl.html">#BibliotecaYArchivoNacionalDeChile</a>
 
 
@@ -76,8 +76,8 @@ la plataforma. Si tienes comentarios, no dudes en escribirnos!
  <img id="imagdos"src="panoramas-2.jpg">
     <div id="overlaydos">
         <div id="textodos">
-        <a href="etiquetas/t-racionalizado.html">#TerritorioRacionalizado</a>
-        <a href="etiquetas/alturas.html">#Alturas</a>
+        <a href="etiquetas/t-racionalizado.html">#TerritorioRacionalizado</a><br>
+        <a href="etiquetas/alturas.html">#Alturas</a><br>
         <a href="etiquetas/asa.html">#AntropologosDelSurAndino</a>
         </div>
     </div>
