--- a/proyecto.html
+++ b/proyecto.html
@@ -43,7 +43,9 @@ Centrando la atención en las evocaciones que las imágenes provocan por sí mis
 A partir de la recopilación documental de representaciones cartográficas de las zonas limítrofes de Chile y Bolivia se problematiza respecto a los límites visuales que dichos documentos instalan entre estos países. Así, las 200 imágenes que conforman la muestra han sido etiquetadas utilizando <a href="etiquetas/todas.html" style="color:rgb(203,79, 76); text-decoration:none;">tags</a>, en búsqueda de generar grupos críticos que devienen de las relaciones que emergen de su entrecruzamiento, como la <a href="etiquetas/racionalizado.html" style="color:rgb(203,79, 76); text-decoration:none;">#Racionalizacion</a>, <a href="etiquetas/caminos.html" style="color:rgb(203,79, 76); text-decoration:none;">#Caminos</a>, <a href="etiquetas/cordillera.html" style="color:rgb(203,79, 76); text-decoration:none;">#CordilleraComoEjeEstructural</a>, <a href="etiquetas/usoyrelacion.html" style="color:rgb(203,79, 76); text-decoration:none;">#UsoYRelaciónConLaTierra</a>, <a href="etiquetas/t-disputa.html" style="color:rgb(203,79, 76); text-decoration:none;">#TerritorioEnDisputa</a>, entre otros. <br>
     <br>
 Este es un modelo en desarrollo, cuya primera versión digital nos da insumos para comenzar a discutir. En una segunda etapa, pretendemos evaluar la interacción entre las imágenes y las posibilidades que otorgan las etiquetas en cuanto a los cruces de información, para mejorar tanto la interacción entre los contenidos, como la experiencia del usuario con 
-la plataforma. Si tienes comentarios, no dudes en escribirnos!
+la plataforma.<br>
+<br>
+Si tienes comentarios, no dudes en escribirnos!
 
 
  </p></div>
